--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
             <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="./contacts.html">Контакты</a>
+            <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./contacts.html">Контакты</a>
           </li>
         </ul>
 
@@ -72,10 +72,10 @@
             <a class="site-menu__link" href="./index.html">Студия</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link site-menu__link--active" href="./portfolio.html">Портфолио</a>
+            <a class="site-menu__link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link" href="./contacts.html">Контакты</a>
+            <a class="site-menu__link site-menu__link--active" href="./contacts.html">Контакты</a>
           </li>
         </ul>
       </nav>
