--- a/dlapracodawcy.html
+++ b/dlapracodawcy.html
@@ -18,7 +18,9 @@
   <header class="page-header page-header--boreder">
     <div class="page-header__container container">
       <a class="page-header__logo" href="./index.html">
-        <span class="logo--color">Web</span>Studio</a>
+        <!-- <span class="logo--color">Web</span>Studio -->
+        <img src="./images/mflogo.png" alt="Logo" width="170px" height="70px">
+      </a>
       <button class="btn-menu" type="button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
         <svg width="40" height="40">
           <use class="icon-menu" href="./images/icons/icons.svg#icon-menu"></use>
@@ -29,14 +31,14 @@
       <div class="mobile-menu" data-menu>
         <ul class="mobile-menu-nav">
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="./index.html">Студия
+            <a class="mobile-menu-nav-link" href="./index.html">O nas
             </a>
           </li>
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./portfolio.html">Портфолио</a>
+            <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./dlapracodawcy.html">Dla pracodawcy</a>
           </li>
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="./contacts.html">Контакты</a>
+            <a class="mobile-menu-nav-link" href="./kontakt.html">Kontakt</a>
           </li>
         </ul>
 
@@ -47,7 +49,7 @@
             </a>
           </li>
           <li class="mobile-menu-contacts-item">
-            <a class="mobile-menu-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="mobile-menu-contacts-link" href="mailto:sprzedaz@mf-solutions.pl">sprzedaz@mf-solutions.pl</a>
           </li>
         </ul>
 
@@ -69,23 +71,23 @@
       <nav class="site-header__nav">
         <ul class="site-menu list">
           <li class="site-menu__item">
-            <a class="site-menu__link" href="./index.html">Студия</a>
+            <a class="site-menu__link" href="./index.html">O nas</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link site-menu__link--active" href="./portfolio.html">Портфолио</a>
+            <a class="site-menu__link site-menu__link--active" href="./dlapracodawcy.html">Dla pracodawcy</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link" href="./contacts.html">Контакты</a>
+            <a class="site-menu__link" href="./kontakt.html">Kontakt</a>
           </li>
         </ul>
       </nav>
       <ul class="site-contact list">
         <li class="site-contact__item">
-          <a class="site-contact__link email" href="mailto:info@devstudio.com">
+          <a class="site-contact__link email" href="mailto:sprzedaz@mf-solutions.pl">
             <svg class="site-contact__icon" width="16" height="12">
               <use href="./images/icons/icons.svg#icon-email"></use>
             </svg>
-            info@devstudio.com
+            sprzedaz@mf-solutions.pl
           </a>
         </li>
         <li class="site-contact__item">
@@ -417,15 +419,18 @@
     <div class="page-footer__container container">
       <div class="page-footer__wrapper">
         <div class="wrapper-address">
-          <a class="footer_logo" href="/"><span class="logo--color">Web</span>Studio</a>
+          <a class="footer_logo" href="/">
+            <!-- <span class="logo--color">Web</span>Studio -->
+            <img src="./images/mflogo-white.png" alt="Logo" width="200px" height="80px">
+          </a>
           <address>
             <ul class="address-list list">
               <li class="address-list__item">
                 <a class="address-list__link address-list__link--color" href="https://goo.gl/maps/ramN2arNtJo2N1Zz9"
-                  target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                  target="_blank" rel="noopener noreferrer">Jana Heweliusza 12/12 <br>Gdańsk 80-890</a>
               </li>
               <li class="address-list__item">
-                <a class="address-list__link" href="mailto:info@example.com">info@example.com</a>
+                <a class="address-list__link" href="mailto:sprzedaz@mf-solutions.pl">sprzedaz@mf-solutions.pl</a>
               </li>
               <li class="address-list__item">
                 <a class="address-list__link" href="tel:+380991111111">+38 099 111 11 11</a>
@@ -434,7 +439,7 @@
           </address>
         </div>
         <div class="social-container">
-          <p class="social-container__title">Присоединяйтесь</p>
+          <p class="social-container__title">MF Solutions w Social Media</p>
           <ul class="social-list footer-social-list--gap list">
             <li class="social-list__item">
               <a class="social-list__link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
@@ -471,19 +476,24 @@
         </div>
       </div>
       <div class="subscribe-container">
-        <p class="subscribe-container__title">Подпишитесь на рассылку</p>
+        <p class="subscribe-container__title">Zapisz się do Newslettera</p>
         <form class="subscribe-form">
           <label>
             <input class="subscribe-form__input" type="email" name="subscribe-email" placeholder="E-mail" required />
           </label>
           <button class="main-button subscribe-form__button" type="submit">
-            Подписаться
+            ZAPISUJĘ SIĘ
             <svg class="subscribe-form__icon" width="24" height="24">
               <use href="./images/icons/icons.svg#icon-send"></use>
             </svg>
           </button>
         </form>
       </div>
+    </div>
+    <div class="rodo">
+      <p class="copyright rodos">Copyright 2023 MF Solutions</p>
+      <a class="address-list__link rodos" href="#">Polityka plików cookies</a>
+      <a class="address-list__link rodos" href="#">RODO</a>
     </div>
   </footer>
   <script src="./js/menu.js"></script>
