--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8" />
@@ -31,14 +31,14 @@
       <div class="mobile-menu" data-menu>
         <ul class="mobile-menu-nav">
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./index.html">Студия
+            <a class="mobile-menu-nav-link mobile-menu-nav-link--active" href="./index.html">O nas
             </a>
           </li>
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="./portfolio.html">Портфолио</a>
+            <a class="mobile-menu-nav-link" href="./dlapracodawcy.html">Dla pracodawcy</a>
           </li>
           <li class="mobile-menu-nav-item">
-            <a class="mobile-menu-nav-link" href="./contacts.html">Контакты</a>
+            <a class="mobile-menu-nav-link" href="./kontakt.html">Kontakt</a>
           </li>
         </ul>
 
@@ -71,13 +71,13 @@
       <nav class="site-header__nav">
         <ul class="site-menu list">
           <li class="site-menu__item">
-            <a class="site-menu__link site-menu__link--active" href="./index.html">Студия</a>
+            <a class="site-menu__link site-menu__link--active" href="./index.html">O nas</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link" href="./portfolio.html">Портфолио</a>
+            <a class="site-menu__link" href="./dlapracodawcy.html">Dla pracodawcy</a>
           </li>
           <li class="site-menu__item">
-            <a class="site-menu__link" href="./contacts.html">Контакты</a>
+            <a class="site-menu__link" href="./kontakt.html">Kontakt</a>
           </li>
         </ul>
       </nav>
@@ -107,17 +107,17 @@
     <section class="section-hero">
       <div class="container">
         <h1 class="section-hero__title">
-          Эффективные решения для вашего бизнеса
+          Skuteczne wsparcie twojego biznesu
         </h1>
         <button class="section-hero__button main-button" type="button" data-modal-open>
-          Заказать услугу
+          Zapytanie ofertowe
         </button>
       </div>
     </section>
     <!-- Секція наші переваги -->
     <section class="section-advantage section">
       <div class="container">
-        <h2 class="visually-hidden">Наши преимущества</h2>
+        <h2 class="experience__title">Co zyskujesz z MF Solutions?</h2>
         <ul class="advantage-list list card-set">
           <li class="advantage-list__item card-set-item">
             <div class="advantage-thumb">
@@ -125,10 +125,9 @@
                 <use href="./images/icons/icons.svg#icon-antenna"></use>
               </svg>
             </div>
-            <h3 class="advantage-list__title">Внимание к деталям</h3>
+            <h3 class="advantage-list__title">Specjalistów</h3>
             <p class="advantage-list__subtitle">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
+              przykładamy wagę do kwalifikacji, doświadczenia, motywacji, potencjału.
             </p>
           </li>
           <li class="advantage-list__item icon-clock card-set-item">
@@ -137,10 +136,9 @@
                 <use href="./images/icons/icons.svg#icon-clock"></use>
               </svg>
             </div>
-            <h3 class="advantage-list__title">Пунктуальность</h3>
+            <h3 class="advantage-list__title">Czas</h3>
             <p class="advantage-list__subtitle">
-              Задача организации, в особенности же рамки и место обучения
-              кадров влечет за собой.
+              możliwość skupienia się na innych kluczowych zadaniach.
             </p>
           </li>
           <li class="advantage-list__item icon-diagram card-set-item">
@@ -149,10 +147,9 @@
                 <use href="./images/icons/icons.svg#icon-diagram"></use>
               </svg>
             </div>
-            <h3 class="advantage-list__title">Планирование</h3>
+            <h3 class="advantage-list__title">Oszczędności</h3>
             <p class="advantage-list__subtitle">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
+              skuteczna rekrutacja to ustabilizowana sytuacja i rozwój firmy.
             </p>
           </li>
           <li class="advantage-list__item icon-astronaut card-set-item">
@@ -161,10 +158,9 @@
                 <use href="./images/icons/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
-            <h3 class="advantage-list__title">Современные технологии</h3>
+            <h3 class="advantage-list__title">Gwarancję jakości</h3>
             <p class="advantage-list__subtitle">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
+              monitorujemy satysfakcję Państwa i zatrudnionych kandydatów.
             </p>
           </li>
         </ul>
@@ -173,7 +169,7 @@
     <!-- Секція чим ми займаємось -->
     <section class="section-experience section">
       <div class="container">
-        <h2 class="experience__title">Чем мы занимаемся</h2>
+        <h2 class="experience__title">Nasze usługi</h2>
         <ul class="experience-list list card-set">
           <li class="experience-list__item card-set-item">
             <div class="wrapper-img">
@@ -183,7 +179,7 @@
                   " src="./images/desktop/work/img-work-1.jpg" alt="Человек печатает на клавиатуре" width="370"
                 height="294" />
               <div class="experience-thumb">
-                <h3 class="experience-thumb__title">Десктопные приложения</h3>
+                <h3 class="experience-thumb__title">OUTSOURCING</h3>
               </div>
             </div>
           </li>
@@ -195,7 +191,7 @@
                   " src="./images/desktop/work/img-work-2.jpg" alt="Человек, держащий телефон" width="370"
                 height="294" />
               <div class="experience-thumb">
-                <h3 class="experience-thumb__title">Мобильные приложения</h3>
+                <h3 class="experience-thumb__title">PRACA TYMCZASOWA</h3>
               </div>
             </div>
           </li>
@@ -207,7 +203,7 @@
                   " src="./images/desktop/work/img-work-3.jpg" alt="Человек, держащий планшет" width="370"
                 height="294" />
               <div class="experience-thumb">
-                <h3 class="experience-thumb__title">Дизайнерские решения</h3>
+                <h3 class="experience-thumb__title">Legalizacja pracy i pobytu cudzoziemców</h3>
               </div>
             </div>
           </li>
@@ -446,10 +442,10 @@
     <!-- Clients -->
     <section class="section-clients section">
       <div class="container">
-        <h2 class="section-clients__title">Постоянные клиенты</h2>
+        <h2 class="section-clients__title">Zaufali nam</h2>
         <ul class="clients-list list card-set">
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="ya&co">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-1"></use>
@@ -458,7 +454,7 @@
           </li>
 
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="company tagline hehre">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-2"></use>
@@ -467,7 +463,7 @@
           </li>
 
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="company">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-3"></use>
@@ -476,7 +472,7 @@
           </li>
 
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="foster peters">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-4"></use>
@@ -485,7 +481,7 @@
           </li>
 
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="brand">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-5"></use>
@@ -494,7 +490,7 @@
           </li>
 
           <li class="clients-list__item card-set-item">
-            <a class="clients-list__link" href="" lang="en" target="_blank" rel="noopener noreferrer"
+            <a class="clients-list__link" href="#" lang="en" target="_blank" rel="noopener noreferrer"
               aria-label="company tag line">
               <svg class="clients-list__icon" width="106" height="60">
                 <use href="./images/icons/icons.svg#icon-client-6"></use>
@@ -530,7 +526,7 @@
           </address>
         </div>
         <div class="social-container">
-          <p class="social-container__title">Присоединяйтесь</p>
+          <p class="social-container__title">MF Solutions w Social Media</p>
           <ul class="social-list footer-social-list--gap list">
             <li class="social-list__item">
               <a class="social-list__link" href="" target="_blank" rel="noopener noreferrer" aria-label="instagram">
@@ -567,19 +563,24 @@
         </div>
       </div>
       <div class="subscribe-container">
-        <p class="subscribe-container__title">Подпишитесь на рассылку</p>
+        <p class="subscribe-container__title">Zapisz się do Newslettera</p>
         <form class="subscribe-form">
           <label>
             <input class="subscribe-form__input" type="email" name="subscribe-email" placeholder="E-mail" required />
           </label>
           <button class="main-button subscribe-form__button" type="submit">
-            Подписаться
+            ZAPISUJĘ SIĘ
             <svg class="subscribe-form__icon" width="24" height="24">
               <use href="./images/icons/icons.svg#icon-send"></use>
             </svg>
           </button>
         </form>
       </div>
+    </div>
+    <div class="rodo">
+      <p class="copyright rodos">Copyright 2023 MF Solutions</p>
+      <a class="address-list__link rodos" href="#">Polityka plików cookies</a>
+      <a class="address-list__link rodos" href="#">RODO</a>
     </div>
   </footer>
   <div class="backdrop is-hidden" data-modal>
@@ -591,11 +592,11 @@
       </button>
       <div class="modal-container">
         <p class="modal-container__title">
-          Оставьте свои данные, мы вам перезвоним
+          Formularz dla pracodawcy
         </p>
         <form class="modal-form" autocomplete="off">
           <div class="input-group">
-            <label class="input-wrapper input-group__label"><span class="input-group__name">Имя</span>
+            <label class="input-wrapper input-group__label"><span class="input-group__name">Imię i Nazwisko</span>
               <input class="modal-form__input" type="text" name="user-name" required />
               <svg class="input-group__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-person-input"></use>
@@ -603,7 +604,7 @@
             </label>
           </div>
           <div class="input-group">
-            <label class="input-group__label input-wrapper"><span class="input-group__name">Телефон</span>
+            <label class="input-group__label input-wrapper"><span class="input-group__name">Numer kontaktowy</span>
               <input class="modal-form__input" type="tel" name="tel" required />
               <svg class="input-group__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-phone-input"></use>
@@ -611,7 +612,7 @@
             </label>
           </div>
           <div class="input-group">
-            <label class="input-group__label input-wrapper"><span class="input-group__name">Почта</span>
+            <label class="input-group__label input-wrapper"><span class="input-group__name">E-mail</span>
               <input class="modal-form__input" type="email" name="email" required />
               <svg class="input-group__icon" width="18" height="18">
                 <use href="./images/icons/icons.svg#icon-email-input"></use>
@@ -619,15 +620,15 @@
             </label>
           </div>
           <div class="textarea-group">
-            <label class="textarea-group__label"><span class="textarea-group__name">Комментарий</span>
-              <textarea class="modal-form__textarea" name="comment" placeholder="Введите текст"></textarea>
+            <label class="textarea-group__label"><span class="textarea-group__name">Zapytanie</span>
+              <textarea class="modal-form__textarea" name="comment" placeholder="Treść zapytania"></textarea>
             </label>
           </div>
           <div class="checkbox-group">
             <label class="checkbox-group__label">
               <input class="modal-form__checkbox" type="checkbox" name="policy" required />
-              <span class="checkbox-group__text">Соглашаюсь с рассылкой и принимаю</span>
-              <a class="checkbox-group__link" href="#">Условия договора</a>
+              <span class="checkbox-group__text">Zgoda na przetworzenie danych</span>
+              <a class="checkbox-group__link" href="#">Czytaj więcej.</a>
               <svg class="checkbox-group__icon" width="16" height="15">
                 <use href="./images/icons/icons.svg#icon-check"></use>
               </svg>
@@ -635,7 +636,7 @@
           </div>
           <div class="btn-wrapper button-wrapper">
             <button class="main-button modal-form__button" type="submit">
-              Отправить
+              Wyślij
             </button>
           </div>
         </form>
