--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- Секція наші переваги -->
     <section class="section-advantage section">
       <div class="container">
-        <h2 class="experience__title">Co zyskujesz z MF Solutions?</h2>
+            <h2 class="experience__title">Co zyskujesz z MF Solutions</h2>
         <ul class="advantage-list list card-set">
           <li class="advantage-list__item card-set-item">
             <div class="advantage-thumb">
